test/shouldPass/vonVolker/test13.pas
program test13;

var
    z : integer;

procedure hi(a , b : integer; c, d : string; g : boolean);
var
    i : integer;
begin
    i := b +5;
end;

begin
    hi(1+7,z, 'true','ho', true or false);
end.