test/shouldFail/dupVarMultiple.pas
program Sample;
var
 i, b, c, d : integer;
 a, b :  string;
//  ^
// Symbol 'b' is already declared in this scope

begin
  while (i < 10) do
    i := i + 1;
end.
